Fix Network china-map, gaps on the page

--- a/src/public/less/pages/network.less
+++ b/src/public/less/pages/network.less
@@ -15,6 +15,7 @@
 
 	.c-new-infographic-banner {
 		width: 100%;
+		margin: 0 auto 40px;
 
 		@media (min-width: @screen-sm-min) {
 			margin: 0 auto 80px;
@@ -135,6 +136,7 @@
 		padding: 0 24px;
 
 		&_section {
+			width: 100%;
 			max-width: 808px;
 			margin: 0 auto;
 			font-size: 14px;
@@ -171,30 +173,39 @@
 					line-height: 56px;
 					margin: 0 0 40px;
 				}
-
-				&:first-child {
-					margin-top: 24px;
-				}
 			}
-		}
-	}
 
-	.china-map {
-		margin-top: 64px;
+			&:first-child h2 {
+				margin-top: 24px;
+			}
 
-		@media (max-width: @screen-xs-max) {
-			overflow: hidden;
-			margin-top: 56px;
-			margin-left: -24px;
-			margin-right: -24px;
-		}
+			p {
+				margin: 0;
+			}
 
-		img {
-			width: 100%;
+			.china-map {
+				display: flex;
+				justify-content: flex-end;
+				overflow: hidden;
+				margin: 56px -24px 0;
 
-			@media (max-width: @screen-xs-max) {
-				width: 160%;
-				transform: translateX(-37.5%);
+				@media (min-width: 576px) {
+					justify-content: center;
+				}
+
+				@media (min-width: @screen-sm-min) {
+					margin: 64px 0 0;
+				}
+
+				img {
+					width: 575px;
+					height: 271px;
+
+					@media (min-width: @screen-sm-min) {
+						width: 806px;
+						height: 380px;
+					}
+				}
 			}
 		}
 	}
